API ChangeLog

15-Dec-2014	DM Smith <dmsmith@crosswire.org>
	Fixed endless loop in osis2mod for some inputs.

15-Dec-2014	DM Smith <dmsmith@crosswire.org>
	Added support for Psalm Book divisions using <div type=majorSection>
	from GHellings

03-Dec-2014	Karl Kleinpaste <charcoal@users.sf.net>
	Corrected anomalous OSIS highlighting output w/GHellings' patches in
		src/modules/filters/osis{plain,xhtml}.cpp

12-Jul-2014	Костя Маслюк <kostyamaslyuk@gmail.com>
	Versification mapping implementation and example at
		examples/tasks/parallelbibles.cpp

27-Apr-2014	Troy A. Griffitts <scribe@crosswire.org>
	Added C# bindings contributed by Daniel Hughes <trampster@gmail.com>

17-Mar-2014	Chris Little <chrislit@crosswire.org>
	Added zVerse4, zText4, & zCom4 classes to support compressed text/
		commentary modules with entry sizes > 64k

3-Mar-2014	Chris Little <chrislit@crosswire.org>
	Added support for bzip2 (Burrows-Wheeler) module compression via libbz2
	Added support for xz (LZMA2) module compression via liblzma

30-Dec-2013 	Peter von Kaehne <refdoc@crosswire.org>
	Added LaTeX output filters


* Release 1.7.0 *

5-Oct-2013	Troy A. Griffitts <scribe@crosswire.org>
	Add a new Option filter, OSISReferenceLinks, based on work submitted
		by "John Austin", which allows removal of references based on
		a type/subtype combination. .conf usage is:
		GlobalOptionFilter=OSISReferenceLinks|Option Name|Option Tip
			|OSIS Reference Type|OSIS Reference SubType
			|Default Value
		e.g,
		GlobalOptionFilter=OSISReferenceLinks|Reference Material Links
			|Hide or show links in the Biblical text to study helps
			|x-glossary||On

14-Aug-2013	Troy A. Griffitts <scribe@crosswire.org>
	Added new version macros in swversion.h and removed
		config.h as a packaged and included entity

2-Aug-2013	Chris Little <chrislit@crosswire.org>
	Added basic bibliography method to SWModule
		(mostly from refdoc's patch)

16-July-2013	Troy A. Griffitts <scribe@crosswire.org>